@@ -16,7 +16,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #endif
 
 #ifdef RCS
-static char rcsid[] = "$Id: gamerend.c,v 1.8.2.1 2003-06-02 21:43:14 btb Exp $";
+static char rcsid[] = "$Id: gamerend.c,v 1.8.2.2 2003-06-06 09:59:06 btb Exp $";
 #endif
 
 #ifdef WINDOWS
@@ -1381,9 +1381,6 @@ void game_render_frame_mono(void)
          #ifdef _3DFX
          _3dfx_BufferSwap();
          #endif
-#ifdef OGL
-	ogl_swap_buffers();
-#endif
 
 			}
 		} else	{
@@ -1428,6 +1425,9 @@ void game_render_frame_mono(void)
 	con_update();
 
 	gr_update();
+#ifdef OGL
+	ogl_swap_buffers();
+#endif
 }
 
 void toggle_cockpit()
